# AiEnhance

./: .env.example  .gitignore  2025-08-27-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE.md  COLLABORATION_LAYER_SUMMARY.md  DOCKER_DEPLOYMENT.md  GEMINI.md  GRADIO_DEMO.md  GRADIO_INTERFACE.md  LLM_INTEGRATION_SUMMARY.md  MIRIX_INTEGRATION_GUIDE.md  MIRIX_SDK_SETUP.md  OLLAMA_USAGE_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  UNIFIED_LLM_INTEGRATION.md  UV_USAGE.md  ai.py  ai_streaming.py  cli_example.py  demo_complete_system.py  demo_gradio.py  demo_llm_integration.py  docker-compose.deps.yml  docker-compose.yml  docker-start.sh  gradio_interface.py  layered_streaming_demo.py  main.py  mirix_frontend_integration.py  mirix_viewer.py  pyproject.toml  setup-ollama.sh  setup_uv_deps.py  simple_mirix_server.py  simple_test.py  start_gradio_uv.py  test_collaboration_layer.py  test_docker_integration.py  (+9 more)
aienhance/: __init__.py  config.py  enhanced_system_factory.py
aienhance/behavior/: __init__.py  adaptive_output.py  behavior_layer.py
aienhance/cognition/: __init__.py  analogy_reasoning.py  cognition_layer.py  memory_activation.py  semantic_enhancement.py
aienhance/collaboration/: __init__.py  cognitive_challenge.py  collaboration_layer.py  collaborative_coordinator.py  dialectical_perspective.py  interfaces.py
aienhance/core/: __init__.py  adaptive_output.py  base_architecture.py  behavior_layer.py  cognition_layer.py  collaboration_layer.py  collaborative_reasoning.py  context_analysis.py  domain_inference.py  layer_interfaces.py  layered_cognitive_system.py  layered_system_factory.py  llm_module_base.py  memory_activation.py  memory_cognitive_system.py  multi_llm_config.py  perception_layer.py  prompts.py  restructured_system_factory.py  user_modeling.py
aienhance/layers/: __init__.py  behavior_layer.py  cognition_layer.py  collaboration_layer.py  perception_layer.py
aienhance/llm/: __init__.py  interfaces.py
aienhance/memory/: __init__.py  interfaces.py
aienhance/modules/: __init__.py  adaptive_output.py  collaborative_reasoning.py  context_analysis.py  (+3 more)
docker/: docker-compose.full.yml  docker-compose.yml  docker-start.sh
docs/: legacy_llm_user_modeling.py  llm_domain_inference.md  prompt_management.md  semantic_user_modeling_summary.md
examples/: memory_usage_example.py  multi_llm_config_example.py  ollama_integration_example.py  prompt_management_example.py  quick_start.py
scripts/: check_config.py  diagnose_graphiti.py  fix_graphiti_embedding.py  graphiti_final_report.py  graphiti_test_report.py  migrate_to_sdk.py  setup_uv_deps.py  start-dev.sh  start_gradio.py  start_gradio_uv.py  test_graphiti_direct.py  test_ollama_embedding.py
templates/: index.html
tests/: README_graphiti_tests.md  __init__.py  simple_test.py  test_cli.py  test_collaboration_layer.py  test_docker_integration.py  test_gradio_attribute_fixes.py  test_gradio_layer_fix.py  test_graphiti_detailed.py  test_graphiti_final.py  test_graphiti_integration.py  test_graphiti_memory_system.py  test_graphiti_simple.py  test_llm_domain_inference.py  test_llm_integration.py  test_memory_fix.py  test_mirix_connection.py  test_mirix_sdk.py  test_ollama_integration.py  test_restructured_system.py  test_semantic_user_modeling.py  test_semantic_user_modeling_simple.py
(+63 files in other folders)
