[project]
name = "aienhance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio",
    "dataclasses-json>=0.6.0",
    "typing-extensions>=4.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "mirix>=0.1.0", # MIRIX Python SDK for memory system
    "gradio>=3.36.1",
    "plotly>=6.3.0",
    "pandas>=2.3.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
