[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aienhance*"]

[project]
name = "aienhance"
version = "0.1.0"
description = "AiEnhance - 分层认知系统，提供记忆-认知协同的AI增强功能"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio",
    "dataclasses-json>=0.6.0",
    "typing-extensions>=4.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "aiohttp>=3.8.0", # For HTTP client communication with Graphiti service
    "gradio>=3.36.1",
    "plotly>=6.3.0",
    "pandas>=2.3.1",
    "requests>=2.32.5",
]

# 由于文件在根目录，使用Python直接执行的方式更简单
# [project.scripts]
# aienhance-cli = "cli_example:main"
# aienhance-web = "gradio_interface:main"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
